--- a/VibeCheck/Components/ResultsVisualization.razor
+++ b/VibeCheck/Components/ResultsVisualization.razor
@@ -36,7 +36,7 @@
             {
                 feelingCounts.TryAdd(currentFeeling, 0);
                 feelingCounts[currentFeeling]++;
-                currentFeeling = currentFeeling.Parent();
+                currentFeeling = currentFeeling.Parent;
             } while (currentFeeling is not null);
         }
         
@@ -47,9 +47,9 @@
         for (var depth = 0; depth < 3; depth++)
         {
             var similarDepthFeelings = feelingCounts.Select(x => x.Key).Where(x => x.Depth == depth);
-            foreach (var siblingFeelings in similarDepthFeelings.GroupBy(x => x.Parent()))
+            foreach (var siblingFeelings in similarDepthFeelings.GroupBy(x => x.Parent))
             {
-                var parentFeeling = siblingFeelings.First().Parent();
+                var parentFeeling = siblingFeelings.First().Parent;
                 var startAngle = parentFeeling == null ? 0 :feelingStartingAngle[parentFeeling];
                 var maxSize = parentFeeling == null ? 1 :feelingMaxSize[parentFeeling];
                 var parentCount = parentFeeling == null ? totalFeelingCount : feelingCounts[parentFeeling];
