--- a/VibeCheck/Components/ResultsVisualization.razor
+++ b/VibeCheck/Components/ResultsVisualization.razor
@@ -17,7 +17,7 @@
     private List<Feeling> _allFeelings = new();
 
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         _tiles = SizeTiles();
     }
