--- a/VibeCheck/Pages/SurveyResponse.razor
+++ b/VibeCheck/Pages/SurveyResponse.razor
@@ -14,8 +14,8 @@
 
         <div class="flex items-center justify-center mt-6 space-x-4">
             <p class="text-center text-xl">I feel @selectedFeeling</p>
-            <button class="px-6 py-3 font-semibold rounded-lg  @(selectedFeeling == "_____" ? "bg-gray-500 text-gray-300" : "bg-green-500 text-white hover:bg-green-600")"
-                    @onclick="SubmitFeeling" disabled="@(selectedFeeling == "_____")">Submit</button>
+            <button class="px-6 py-3 font-semibold rounded-lg  @(selectedFeeling is null ? "bg-gray-500 text-gray-300" : "bg-green-500 text-white hover:bg-green-600")"
+                    @onclick="SubmitFeeling" disabled="@(selectedFeeling is null)">Submit</button>
         </div>
     </div>
 </div>
@@ -25,7 +25,7 @@
     public string Code { get; set; }
 
     private string surveyQuestion;
-    private string selectedFeeling = "_____";
+    private Feeling? selectedFeeling;
 
     protected override async Task OnInitializedAsync()
     {
@@ -41,14 +41,17 @@
         }
     }
 
-    private void OnFeelingSelected(string feeling)
+    private void OnFeelingSelected(Feeling feeling)
     {
         selectedFeeling = feeling;
     }
 
     private async Task SubmitFeeling()
     {
-        await Http.PostAsJsonAsync($"http://localhost:5183/survey/submit/{Code}", selectedFeeling);
-        Navigation.NavigateTo($"{Code}/results");
+        if (selectedFeeling is not null)
+        {
+            await Http.PostAsJsonAsync($"http://localhost:5183/survey/{Code}/submit", selectedFeeling);
+            Navigation.NavigateTo($"{Code}/results");
+        }
     }
 }
