--- a/VibeCheck/Pages/SurveyResult.razor
+++ b/VibeCheck/Pages/SurveyResult.razor
@@ -8,7 +8,14 @@
         <h1 class="text-3xl font-bold text-center mb-4 text-red-500">@surveyQuestion</h1>
 
         <div class="space-y-6">
-            <ResultsVisualization Responses="responses"/>
+            @if (responses.Count() < 2)
+            {
+                <p class="text-center text-xl">Not enough responses yet.</p>
+            }
+            else
+            {
+                <ResultsVisualization Responses="responses"/>
+            }
         </div>
     </div>
 </div>
@@ -18,11 +25,10 @@
     public string Code { get; set; }
 
     private string surveyQuestion;
-    private List<Model.ViewModels.SurveyResponse> responses;
+    private List<Model.ViewModels.SurveyResponse> responses = new();
 
     protected override async Task OnInitializedAsync()
     {
-        
         var surveyResponse = await Http.GetAsync($"http://localhost:5183/survey/{Code}");
         if (surveyResponse.IsSuccessStatusCode)
         {
@@ -33,8 +39,8 @@
         {
             surveyQuestion = "Survey not found.";
         }
-        
-        var responsesResponse = await Http.GetAsync($"http://localhost:5183/survey/responses/{Code}");
+
+        var responsesResponse = await Http.GetAsync($"http://localhost:5183/survey/{Code}/responses");
         if (responsesResponse.IsSuccessStatusCode)
         {
             responses = await responsesResponse.Content.ReadFromJsonAsync<List<Model.ViewModels.SurveyResponse>>();
